syntax = "proto3";

package hashicorp.consul.auth.v2beta1;

import "pbauth/v2beta1/traffic_permissions.proto";
import "pbresource/annotations.proto";

message ComputedTrafficPermissions {
  option (hashicorp.consul.resource.spec) = {scope: SCOPE_NAMESPACE};

  repeated Permission allow_permissions = 1;
  repeated Permission deny_permissions = 2;
  bool is_default = 3;
}
